# ag-grid-demo

./: .gitignore  package.json  pnpm-lock.yaml
apps/api/: alembic.ini  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 850c1cc629b6_init_models.py
apps/api/scripts/: build.sh  dev.sh  lint.sh  seed.py
apps/api/src/api/: main.py
apps/api/src/api/core/: config.py
apps/api/src/api/db/: engine.py  session.py
apps/api/src/api/models/: __init__.py  counterparty.py  enums.py  instrument.py  market_data.py  order.py  portfolio.py  position.py  trade.py  trader.py
apps/api/src/api/routers/: trades.py
apps/api/src/api/ssrm/: filters.py  query_builder.py  response.py  schema.py
apps/web/: index.html  package.json  tsconfig.json
apps/web/src/: App.vue
apps/web/src/components/: TradesGrid.vue
apps/web/src/composables/: useTradesDatasource.ts  useWebSocket.ts
