[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend for ag-grid-demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/api"]

[tool.ruff]
src = ["src"]
line-length = 88
